--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,8 @@
 apply plugin: 'java'
 apply plugin: 'eclipse'
+apply plugin: 'maven'
+apply plugin: 'maven-publish'
+
 
 
 sourceCompatibility = 1.8
@@ -28,3 +31,16 @@ test {
 
 task sourceJar(type: Jar) { from sourceSets.main.allJava }
 
+publishing {
+  publications {
+    clubdynamicsDtoJar(MavenPublication) {
+      from components.java
+
+      artifact sourceJar { classifier "sources" }
+
+      groupId groupId
+      artifactId artifactId
+      version version
+    }
+  }
+}
